# tailhead-agent

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  PLAN_ORG_EXECUTOR.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  e2e.yml
artifacts/demo-org-v2-2026-03-28_23-50-10/: 00-doctor.json  01-org-doctor.json  02-org-checklist-from-plan.json  02-org-checklist-from-plan.md  03-org-prepare-no-browser.json  DEMO.md  e2e-plan-latest.json  plan-stdout.json
artifacts/demo-titlecards-2026-03-29/: DEMO.md  e2e-manifest.json  e2e-plan-7466f5dc-42d1-48d0-9cd9-73e5eedeb9d4.json
artifacts/e2e-demo/: e2e-plan-latest.json  trailhead-agent-e2e-plan.webm
artifacts/manual-e2e-contract/: e2e-manifest.json  e2e-org-prepare-latest.json  e2e-plan-2b67bbcb-f349-4169-a76a-13b9ae18e14a.json  e2e-plan-latest.json  e2e-report.html  (+6 more)
config/: default.yaml  org_checklists.yaml
docs/: HOW_TO_SAVE_PDF.md  trailhead-agent-engineering-reference.html  trailhead-agent-project-report.html
scripts/: debug_hrefs.py  generate_engineering_pdf.py  generate_project_report_pdf.py  print_docs_to_pdf.ps1  run-e2e-plan.ps1  run-e2e-plan.sh
tests/: conftest.py  test_browser_agent_primitives.py  test_cli_org_executor.py  test_demo_browser.py  test_demo_titlecards.py  test_discovery.py  test_discovery_degenerate.py  test_e2e_artifacts.py  test_e2e_viewer.py  test_golden_ranking.py  test_langgraph_harness.py  test_llm_errors.py  test_llm_ranking.py  test_org_checklists.py  test_org_executor.py  test_org_prepare_demo_guide.py  test_plan_json.py  test_ranking_pipeline.py  test_runner_walk.py  test_validation.py
(+32 files in other folders)
